Fix alignment

--- a/frontend/src/scenes/insights/views/BoldNumber/BoldNumber.scss
+++ b/frontend/src/scenes/insights/views/BoldNumber/BoldNumber.scss
@@ -3,7 +3,10 @@
 .BoldNumber {
     width: 100%;
     padding: 2rem 0 3rem;
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex: 1;
 
     @include screen($md) {
         padding: 3rem 0 5rem;
